[gd_scene load_steps=7 format=3 uid="uid://cgv80kk40ps3m"]

[ext_resource type="PackedScene" uid="uid://b6mtufhmvgyqo" path="res://Actor.tscn" id="1_base"]
[ext_resource type="Script" path="res://Character.gd" id="2_script"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x865r"]
radius = 17.0
height = 58.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.87451, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57a1u"]
bg_color = Color(4.62055e-06, 0.634556, 0.96051, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Character" instance=ExtResource("1_base")]
z_index = 5
script = ExtResource("2_script")

[node name="CharacterBody2D" parent="." index="0"]
collision_layer = 2
collision_mask = 13

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D" index="0"]
enabled = false
position_smoothing_enabled = true

[node name="CollisionShape2D" parent="CharacterBody2D" index="1"]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_x865r")

[node name="Label" parent="CharacterBody2D" index="2"]
offset_left = -53.0
offset_top = -70.0
offset_right = 53.0
offset_bottom = -54.0
vertical_alignment = 0

[node name="StatusBars" type="VBoxContainer" parent="CharacterBody2D" index="3"]
offset_left = -50.0
offset_top = 35.0
offset_right = 50.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="HealthBar" type="ProgressBar" parent="CharacterBody2D/StatusBars" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
value = 100.0
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="CharacterBody2D/StatusBars" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_57a1u")
value = 100.0
show_percentage = false
